sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:4: error: not found: value deb
  deb=0
  ^AlgCocktailSort2:5: error: not found: value fin
  fin=getNombreValeurs()-2
  ^AlgCocktailSort2:8: error: not found: value deb
    for (k <- deb to fin) {
              ^AlgCocktailSort2:8: error: not found: value fin
    for (k <- deb to fin) {
                     ^AlgCocktailSort2:10: error: not found: value fin
      fin-=1
      ^AlgCocktailSort2:13: error: not found: value fin
    for (k <- fin to deb by -1) {
              ^AlgCocktailSort2:13: error: not found: value deb
    for (k <- fin to deb by -1) {
                     ^AlgCocktailSort2:15: error: not found: value deb
      deb+=1
      ^