sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() {
  var switch=false
  deb=0
  fin=getNombreValeurs()-2
  while(switch) {
    switch=false
    for (k <- deb to fin) {
      if (plusPetit(k+1,k)) {echange(k,k+1);switch=true}
      fin-=1
    }
    
    for (k <- fin to deb by -1) {
      if (plusPetit(k+1,k)) {echange(k,k+1);switch=true}
      deb+=1
    }
    if (!switch) {return}
  }
}